--- a/chelsea-slade-portfolio/package.json
+++ b/chelsea-slade-portfolio/package.json
@@ -2,7 +2,7 @@
   "name": "chelsea-slade-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chelseaslade.github.io/chelsea-slade-portfolio",
+  "homepage": "https://chelseaslade.github.io/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
