--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chelsea-slade-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chelseaslade.github.io/chelsea-slade-portfolio",
+  "homepage": "https://chelseaslade.github.io",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -11,7 +11,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
