--- a/src/projects.json
+++ b/src/projects.json
@@ -1,18 +1,19 @@
+
 [
     {
         "title": "Binary Search Tree Generator",
         "description": "A Java based application which takes a list of user inputted numbers and generates a Binary Search Tree.",
         "link": "https://github.com/chelseaslade/BinarySearchTree-REST-API",
-        "image": "",
+        "image": "pics/bst_img.png",
         "date": "April, 2025",
         "tags": ["Java", "HTML", "CSS", "REST API", "Mockito"]
     },
     {
         "title": "Java Library Management Application",
-        "description": "A CLI application which allows for the registration of patrons, authors, and books with an integrated borrowing system.",
+        "description": "A CLI application which allows for the registration of patrons, authors, and books with an integrated borrowing system. The program also contains a search function.",
         "link": "https://github.com/chelseaslade/Java-Lib-Management-Program",
-        "image": "",
+        "image": "pics/lib_image.png",
         "date": "October, 2024",
-        "tags": ["Java"]
+        "tags": ["Java", "CLI"]
     }
 ]
